--- a/source/views/pug/header.pug
+++ b/source/views/pug/header.pug
@@ -10,7 +10,7 @@ header.header
     ul.header__links.links-header
       li.links-header__item.links-header__account
         img.links-header__image.links-header__image-account(src='./images/icons/user_icon.svg', alt='userIcon')
-        span Вход
+        span.links-header__account-user Вход
       li.links-header__modal.links-header__modal-account.--hidden
         .modal-account__container.modal-account__container-user.modal__container.--hidden
           button.modal-account__btn.modal-account__btn-logout.modal__btn Выйти
