--- a/source/views/css/header.css
+++ b/source/views/css/header.css
@@ -2,11 +2,12 @@
     height: 75px;
     border-bottom: 1px solid #000;
     background-color: #fff;
-}
-.header__container {
-    height: 100%;
     position: sticky;
     top: 0;
+    z-index: 2;
+}
+.header__container {
+    height: 100%;    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -54,9 +55,6 @@
 }
 .links-header__item:hover {
     background-color: orange;
-}
-.links-header__image {
-    height: 1.5rem;
 }
 .links-header__modal {
     display: block;
@@ -184,6 +182,9 @@ input::-webkit-inner-spin-button {
     height: 100%;
     display: flex;
     align-items: center;
+}
+.links-header__image-account {
+    height: 20px;
 }
 .links-header__image-basket,
 .links-header__image-workspace {
