+workspace-cook;+workspace-waiter;~no-access

--- a/source/views/pug/header.pug
+++ b/source/views/pug/header.pug
@@ -24,7 +24,7 @@ header.header
           span.modal-account__close.modal__close
             img(src='./images/icons/close_icon.svg', alt='x')
       li.links-header__item.links-header__workspace.--hidden
-        a.links-header__workspace-link(href='/workspace')
+        a.links-header__workspace-link(href=`/workspace?${4}`)
           img.links-header__image.links-header__image-workspace(src='./images/icons/workspace_icon.svg', alt='workspaceIcon')
       li.links-header__item.links-header__basket
         img.links-header__image.links-header__image-basket(src='./images/icons/basket_icon.svg', alt='basketIcon')
