--- a/source/views/pug/header.pug
+++ b/source/views/pug/header.pug
@@ -2,7 +2,7 @@ header.header
   .header__container
     .header__info.info-header
       .info-header__logo
-        a.info-header__link-main(href='localhost:3000')
+        a.info-header__link-main(href='/')
           img.info-header__link-image(src='./images/logo.png', alt='logoImg')
       .info-header__contacts
         span.info-header__number 8 800 555 35 35
