--- a/source/views/css/footer.css
+++ b/source/views/css/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    margin-top: 25px;
+    /* margin-top: 25px; */
     background-color: skyblue;
     /* height: 100px; */
     flex: 0 0 auto;
