--- a/source/views/css/workspace-manager.css
+++ b/source/views/css/workspace-manager.css
@@ -34,12 +34,22 @@ h1, h2 {
 .main__tabs > * {
     cursor: pointer;
 }
-.main__tabs > *:hover {
+.main__tabs *:not(ul):hover {
     border-bottom: 1px solid #000;
     margin-bottom: -1px;
 }
+.tabs__dbtables {
+    list-style-type: none;
+    display: none;
+}
+.tabs__dbtables li {
+    padding-left: .5rem;
+}
+.tabs__dbtables.visible {
+    display: block;
+}
 .main__content {
-    flex: 1 0 auto;
+    flex: 1 0;
     display: flex;
     flex-direction: column;
 }
@@ -50,47 +60,32 @@ h1, h2 {
     flex: 1 0 auto;
     padding: 5px 10px;
 }
-.orders__rows {
+.content__info-container {
     display: flex;
+    justify-content: center;
+}
+.register-form {
+    display: inline-flex;
     flex-direction: column;
+    row-gap: 1rem;
 }
-.content__row {
-    padding: 10px;
+.register-form label {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    border: 1px solid #000;
-    border-radius: 3px;
-    flex-wrap: wrap;
-    row-gap: .5rem;
+    column-gap: 1rem;
 }
-.order__arrowIcon {
-    right: 15px;
-    position: absolute;
+.register-form label span {
+    text-align: right;
 }
-.order__list {
-    flex-basis: 100%;
+.register-form label * {
+    width: 50%;
+}
+.form__buttons {
     display: flex;
-    flex-direction: column;
-    row-gap: 10px;
+    justify-content: center;
+    column-gap: 1rem;
 }
-.list__dishes {
-    display: flex;
-    flex-wrap: wrap;
-}
-.list__dish {
-    border-radius: 5px;
-    border: 1px solid #000;
-    padding: 10px;
-    background-color: #e6ffe3;
-}
-.dish__header {
-    text-align: center;
-    margin-bottom: 5px;
-}
-.dish__ingredients li {
-    margin-left: 1rem;
+.form__buttons button {
+    padding: 5px;
 }
 table {
     width: 100%;
