--- a/source/views/css/workspace-waiter.css
+++ b/source/views/css/workspace-waiter.css
@@ -3,6 +3,9 @@
     display: flex;
     flex-direction: column;
 }
+h1, h2 {
+    margin: 0.5rem 0;
+}
 .main {
     width: 80%;
     margin: 0 auto;
