--- a/source/views/css/workspace-waiter.css
+++ b/source/views/css/workspace-waiter.css
@@ -68,3 +68,31 @@ h1, h2 {
     right: 15px;
     position: absolute;
 }
+/* Experimental */
+.content__info-container {
+    display: flex;
+    justify-content: center;
+}
+.content__form {
+    display: inline-flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+.content__form label {
+    display: flex;
+    column-gap: 1rem;
+}
+.content__form label span {
+    text-align: right;
+}
+.content__form label * {
+    width: 50%;
+}
+.form__buttons {
+    display: flex;
+    justify-content: center;
+    column-gap: 1rem;
+}
+.form__buttons button {
+    padding: 5px;
+}
